src/assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Mukta&family=Yeseva+One&display=swap');

@media (prefers-color-scheme: dark) {
    :root {
        --backgroundColor: #EEE6CE;
        --navColor: #214083;
    }
}

@media (prefers-color-scheme: light) {
    :root {
        --backgroundColor: #EEE6CE;
        --navColor: #ad2446;
    }
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

* {
    box-sizing: border-box;
    text-decoration: none;
    user-select: none;
    padding: 0;
    margin: 0;
}

body {
    background-color: var(--backgroundColor);
    font-family: 'Mukta', sans-serif;
    font-size: 200%;
}

.section-header,
#name {
    font-family: 'Yeseva One', cursive;
}

p {
    font-size: 50%;
}

header {
    position: relative;
    top: 0px;
    height: 80px;
    background-color: var(--navColor);
    display: block;
}

header *,
footer * {
    color: var(--backgroundColor);
}

.header {
    opacity: 1;
    transition: opacity 5s;
    transition-delay: 10s;
}

header:hover {
    opacity: 1;
    transition: opacity 1s;
}

.menu {
    position: absolute;
    top: 20px;
    width: 100%;
    list-style-type: none;
    display: flex !important;
    justify-content: space-between;
    flex-wrap: wrap;
    padding: 0 10px;
    background-color: var(--navColor);
    padding-bottom: 10px;
}

.menu-item {
    margin: 0 20px;
}

#hamburger {
    display: none;
}

.active-menu-item {
    text-decoration: underline;
    font-size: 1.1em;
    transition: font-size 300ms ease-in-out;
}

footer {
    background-color: var(--navColor);
    text-align: center;
    position: sticky;
    bottom: 0px;
    width: 100%;
    padding-top: 20px;
}

.section {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    color: var(--navColor);
    padding: 0 5px;
    overflow-x: hidden;
}

.section:nth-child(2n) {
    background-color: var(--navColor);
    color: var(--backgroundColor);
}

.section:last-child {
    padding-bottom: 50px;
}

.section-header {
    position: absolute;
    right: 10px;
    margin: 10px 0;
    color: var(--navColor);
    font-size: 150%;
}

.section:nth-child(2n) .section-header {
    color: var(--backgroundColor);
}

::-webkit-scrollbar {
    width: 0px;
}

::-webkit-scrollbar-track {
    background: var(--backgroundColor);
}

::-webkit-scrollbar-thumb {
    background: var(--hover);
}

::-webkit-scrollbar-thumb:hover {
    background: var(--navColor);
}

@media only screen and (max-width: 1200px) {
    @media (orientation: landscape) {
        footer {
            position: unset;
        }
    }

    .section {
        flex-direction: column;
        justify-content: center;
    }

    .section-header {
        position: initial;
        align-self: center;
        text-align: center;
    }

    .study-item {
        flex-direction: column;
    }
}

@media only screen and (max-width: 600px) {
    .menu {
        padding: 10px;
        display: flex !important;
        flex-direction: column;
    }

    .header {
        transition: none;
        opacity: unset;
        display: block;
    }

    .footer {
        position: fixed;
        bottom: 0px;
        height: 20vh;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
    }

    .menu-visible {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: 80vh;
    }

    .menu-hided {
        display: none;
    }

    .menu-item {
        margin: 0px;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        font-size: 90%;
    }

    li:nth-child(2) {
        position: relative;
    }

    #hamburger {
        display: block;
        margin-right: 10px;
        padding: 10px;
        position: absolute;
        right: 20px;
        border: 1px solid var(--backgroundColor);
        border-radius: 5px;
    }

    #menu_button {
        width: 39px;
        overflow: hidden;
    }

    #menu_checkbox {
        display: none;
    }

    #menu_label {
        position: relative;
        display: block;
        height: 29px;
        cursor: pointer;
    }

    #menu_label:before,
    #menu_label:after,
    #menu_text_bar {
        position: absolute;
        left: 0;
        width: 100%;
        height: 5px;
        background-color: #fff;
    }

    #menu_label:before,
    #menu_label:after {
        content: "";
        transition: 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55) left;
    }

    #menu_label:before {
        top: 0;
    }

    #menu_label:after {
        top: 12px;
    }

    #menu_text_bar {
        top: 24px;
    }

    #menu_text_bar:before {
        content: "MENU";
        position: absolute;
        top: 5px;
        right: 0;
        left: 0;
        color: var(--backgroundColor);
        font-size: 12px;
        font-weight: bold;
        font-family: "Montserrat", Arial, Helvetica, sans-serif;
        text-align: center;
    }

    #menu_checkbox:checked+#menu_label:before {
        left: -39px;
    }

    #menu_checkbox:checked+#menu_label:after {
        left: 39px;
    }

    #menu_checkbox:checked+#menu_label #menu_text_bar:before {
        animation: moveUpThenDown 0.8s ease 0.2s forwards,
            shakeWhileMovingUp 0.8s ease 0.2s forwards,
            shakeWhileMovingDown 0.2s ease 0.8s forwards;
    }

    @keyframes moveUpThenDown {
        0% {
            top: 0;
        }

        50% {
            top: -27px;
        }

        100% {
            top: -14px;
        }
    }

    @keyframes shakeWhileMovingUp {
        0% {
            transform: rotateZ(0);
        }

        25% {
            transform: rotateZ(-10deg);
        }

        50% {
            transform: rotateZ(0deg);
        }

        75% {
            transform: rotateZ(10deg);
        }

        100% {
            transform: rotateZ(0);
        }
    }

    @keyframes shakeWhileMovingDown {
        0% {
            transform: rotateZ(0);
        }

        80% {
            transform: rotateZ(3deg);
        }

        90% {
            transform: rotateZ(-3deg);
        }

        100% {
            transform: rotateZ(0);
        }
    }

    .section {
        display: flex;
        flex-direction: column;
    }

    .section:hover .section-header {
        color: var(--navColor);
        transition: color 400ms ease-in-out;
    }

    .section:nth-child(2n):hover .section-header {
        color: var(--backgroundColor);
        transition: color 400ms ease-in-out;
    }

    .section-header {
        position: initial;
        text-align: center;
    }
}

